exports[`invalid(1): {\"engines\": {\"npm\": \">=10\"}} 1`] = `

[Input]
  1 | {"engines": {"npm": ">=10"}}

`;

exports[`invalid(1): {\"engines\": {\"npm\": \">=10\"}} 2`] = `

Message:
> 1 | {"engines": {"npm": ">=10"}}
    |              ^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/1: Remove the engine.:
  1 | {"engines": {}}

`;

exports[`invalid(2): {\"engines\": {\"yarn\": \">=4\"}} 1`] = `

[Input]
  1 | {"engines": {"yarn": ">=4"}}

`;

exports[`invalid(2): {\"engines\": {\"yarn\": \">=4\"}} 2`] = `

Message:
> 1 | {"engines": {"yarn": ">=4"}}
    |              ^^^^^^ Specify the \`yarn\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/1: Remove the engine.:
  1 | {"engines": {}}

`;

exports[`invalid(3): {\"engines\": {\"pnpm\": \">=9\"}} 1`] = `

[Input]
  1 | {"engines": {"pnpm": ">=9"}}

`;

exports[`invalid(3): {\"engines\": {\"pnpm\": \">=9\"}} 2`] = `

Message:
> 1 | {"engines": {"pnpm": ">=9"}}
    |              ^^^^^^ Specify the \`pnpm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/1: Remove the engine.:
  1 | {"engines": {}}

`;

exports[`invalid(4): {\"engines\": {\"bun\": \">=1\"}} 1`] = `

[Input]
  1 | {"engines": {"bun": ">=1"}}

`;

exports[`invalid(4): {\"engines\": {\"bun\": \">=1\"}} 2`] = `

Message:
> 1 | {"engines": {"bun": ">=1"}}
    |              ^^^^^ Specify the \`bun\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.

Suggestion 1/1: Remove the engine.:
  1 | {"engines": {}}

`;

exports[`invalid(5): {\n\t\t\t\"engines\": {\n\t\t\t\t\"node\": \">=18\",\n\t\t\t\t\"npm\": \">=10\"\n\t\t\t}\n\t\t} 1`] = `

[Input]
  1 | {
  2 | 			"engines": {
  3 | 				"node": ">=18",
  4 | 				"npm": ">=10"
  5 | 			}
  6 | 		}

`;

exports[`invalid(5): {\n\t\t\t\"engines\": {\n\t\t\t\t\"node\": \">=18\",\n\t\t\t\t\"npm\": \">=10\"\n\t\t\t}\n\t\t} 2`] = `

Message:
  1 | {
  2 | 			"engines": {
  3 | 				"node": ">=18",
> 4 | 				"npm": ">=10"
    | 				^^^^^ Specify the \`npm\` version in the \`packageManager\` field (with Corepack) instead of \`engines\`.
  5 | 			}
  6 | 		}

Suggestion 1/1: Remove the engine.:
  1 | {
  2 | 			"engines": {
  3 | 				"node": ">=18"
  4 | 			}
  5 | 		}

`;
